# localstack-testing

./: .gitignore  Makefile  Makefile.old  README.md  config.sh  docker-compose.yml  localstack-base.env  pyproject.toml  template.yaml
.aws-sam/: build.toml
envs/: local_example.json
events/: event_dafiti_br.json  event_prepare_braze_messages.json
src/functions/prepare_braze_messages/: app.py
src/functions/select-audience/: app.py  requirements.txt
src/functions/step1/: app.py
src/statemachine/: abandoned_cart_workflow.asl.json  braze_update_workflow.asl.json  step1_workflow.asl.json
tests/: Makefile  docker-compose.yml  env
tests/integration/: requirements.txt  test_state_machine.py
tests/statemachine/test/: MockConfigFile.json
tests/statemachine/test/events/: canvas_trigger_send.json
tests/unit/functions/prepare_braze_messages/: test_prepare_braze_messages.py
tests/unit/functions/step1/: test_step1.py
